force-app/main/default/objects/vlocity_ins__NonHeldLoss__c/fields/vlocity_ins__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loss History</relationshipLabel>
    <relationshipName>LossHistory</relationshipName>
    <type>Lookup</type>
</CustomField>