force-app/main/default/objects/vlocity_ins__NonHeldLoss__c/fields/vlocity_ins__DateOfLoss__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DateOfLoss__c</fullName>
    <label>Date of Loss</label>
    <type>Date</type>
</CustomField>