force-app/main/default/objects/vlocity_ins__NonHeldLoss__c/fields/vlocity_ins__NonHeldProductId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__NonHeldProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non-Held Product</label>
    <referenceTo>vlocity_ins__NonHeldProduct__c</referenceTo>
    <relationshipLabel>Loss History</relationshipLabel>
    <relationshipName>LossHistory</relationshipName>
    <type>Lookup</type>
</CustomField>