force-app/main/default/objects/vlocity_ins__NonHeldLoss__c/fields/vlocity_ins__TypeOfLoss__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TypeOfLoss__c</fullName>
    <label>Type of Loss</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Natural Disasters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>